testing/macro-tests/tests/ui/store_empty_storage.stderr
error: storage(...) requires exactly one storage mode: stable(...)
  --> tests/ui/store_empty_storage.rs:10:5
   |
10 |     storage()
   |     ^^^^^^^
